spec 000.9.1 design and impl